--- a/index.html
+++ b/index.html
@@ -19,111 +19,110 @@
 
     <div class="container">
         <div class="row">
-            <div class="col">
-                9 am
+            <div class="col hourRow">
+
             </div>
             <div class="col-6">
                 <input class="form-control" type="text">
-
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="save()">Save</button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                10 am
+            <div class="col hourRow">
+
             </div>
             <div class="col-6">
                 <input class="form-control" type="text">
 
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="save()">Save</button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                11 am
+            <div class="col hourRow">
+
             </div>
             <div class="col-6">
                 <input class="form-control" type="text">
 
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="save()">Save</button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                12 pm
+            <div class="col hourRow">
+
             </div>
             <div class="col-6">
                 <input class="form-control" type="text">
 
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="save()">Save</button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                1 pm
+            <div class="col hourRow">
+
             </div>
             <div class="col-6">
                 <input class="form-control" type="text">
 
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="save()">Save</button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                2 pm
+            <div class="col hourRow">
+
             </div>
             <div class="col-6">
                 <input class="form-control" type="text">
 
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="save()">Save</button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                3 pm
+            <div class="col hourRow">
+
             </div>
             <div class="col-6">
                 <input class="form-control" type="text">
 
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="save()">Save</button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                4 pm
+            <div class="col hourRow">
+
             </div>
             <div class="col-6">
                 <input class="form-control" type="text">
 
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="save()">Save</button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                5 pm
+            <div class="col hourRow">
+
             </div>
             <div class="col-6">
                 <input class="form-control" type="text">
 
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary" onclick="save()">Save</button>
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
@@ -133,7 +132,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
     <script src="script.js"></script>
-    
+
 
 </body>
 
