--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c9c3a0343e.js" crossorigin="anonymous"></script>
     <title>Day Schedule</title>
 </head>
 
@@ -25,7 +26,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary"><img src="./image/saveicon.jpg"></button>
+                <button type="button" class="far fa-save fa-2x"></button>
             </div>
         </div>
         <div class="row">
@@ -35,7 +36,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary"><img src="./image/saveicon.jpg"></button>
+                <button type="button" class="far fa-save fa-2x"></button>
             </div>
         </div>
         <div class="row">
@@ -45,7 +46,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary"><img src="./image/saveicon.jpg"></button>
+                <button type="button" class="far fa-save fa-2x"></button>
             </div>
         </div>
         <div class="row">
@@ -55,7 +56,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary"><img src="./image/saveicon.jpg"></button>
+                <button type="button" class="far fa-save fa-2x"></button>
             </div>
         </div>
         <div class="row">
@@ -65,7 +66,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary"><img src="./image/saveicon.jpg"></button>
+                <button type="button" class="far fa-save fa-2x"></button>
             </div>
         </div>
         <div class="row">
@@ -75,7 +76,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary"><img src="./image/saveicon.jpg"></button>
+                <button type="button" class="far fa-save fa-2x"></button>
             </div>
         </div>
         <div class="row">
@@ -85,7 +86,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary"><img src="./image/saveicon.jpg"></button>
+                <button type="button" class="far fa-save fa-2x"></button>
             </div>
         </div>
         <div class="row">
@@ -95,7 +96,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary"><img src="./image/saveicon.jpg"></button>
+                <button type="button" class="far fa-save fa-2x"></button>
             </div>
         </div>
         <div class="row">
@@ -105,7 +106,7 @@
                 <input class="form-control" type="text">
             </div>
             <div class="col">
-                <button type="button" class="btn btn-primary"><img src="./image/saveicon.jpg"></button>
+                <button type="button" class="far fa-save fa-2x"></button>
             </div>
         </div>
     </div>
